# redshql

./: .env.example  .gitignore  Cargo.toml
src/: client.rs  handler.rs  lib.rs  load.rs  main.rs  s3.rs
src/statements/: copy.rs  create.rs  mod.rs
